added sound files and some text in html

--- a/index.html
+++ b/index.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Remember The Sequence</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Remember The Sequence</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-    <h1>starting layout</h1>
+    <h1 id="level-title">Press A Key to Start</h1>
+    <div class="container">
+        <div lass="row">
 
+            <div type="button" id="green" class="btn green">
 
+            </div>
 
+            <div type="button" id="red" class="btn red">
 
+            </div>
+        </div>
 
-    <script src = "https://code.jquery.com/jquery-3.7.1.min.js"></script>
+        <div class="row">
+
+            <div type="button" id="yellow" class="btn yellow">
+
+            </div>
+            <div type="button" id="blue" class="btn blue">
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
