added some styling

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Remember The Sequence</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
 
     <h1 id="level-title">Press A Key to Start</h1>
     <div class="container">
-        <div lass="row">
+        <div class="row">
 
             <div type="button" id="green" class="btn green">
 
