added how to play button

--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
         </div>
 
     </div>
+    <div id="instructions-button">How to Play</div>
+
+    <div id="instructions-box">
+        <p>
+            Welcome to "Remember The Sequence"!<br>
+            <br>Follow these instructions to play the game:
+            <br>Press any key to start the game.
+            <br>Watch and remember the sequence
+            <br>of colored buttons that appear.
+            <br>Click on the buttons in the same sequence.
+            <br>If your sequence matches the game's 
+            <br>sequence, you'll proceed to the next level.
+            <br>If you make a mistake, the game will end.
+            <br>Good luck and have fun!
+        </p>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/script.js"></script>
